added initial bucket retention variable

--- a/.env
+++ b/.env
@@ -1,14 +1,35 @@
 DOCKER_INFLUXDB_INIT_MODE=setup
 
-# Change the values below to customize your setup
-DOCKER_INFLUXDB_INIT_USERNAME=admin
-DOCKER_INFLUXDB_INIT_PASSWORD=password123
-DOCKER_INFLUXDB_INIT_ORG=myorg 
-DOCKER_INFLUXDB_INIT_BUCKET=telegraf
-DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=mySuP3rS3cr3tT0keN
-DOCKER_INFLUXDB_INIT_PORT=8086
-DOCKER_INFLUXDB_INIT_HOST=influxdb
+## Environment variables used during the setup and operation of the stack
+#
 
+# Primary InfluxDB admin/superuser credentials
+#
+DOCKER_INFLUXDB_INIT_USERNAME=changeme
+DOCKER_INFLUXDB_INIT_PASSWORD=changeme # minimum 8 characters
+DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=changeme # admin token
+
+# Primary InfluxDB organization & bucket definitions
+# 
+DOCKER_INFLUXDB_INIT_ORG=changeme # organization name
+DOCKER_INFLUXDB_INIT_BUCKET=changeme # bucket name
+
+# Primary InfluxDB bucket retention period
+#
+# NOTE: Valid units are nanoseconds (ns), microseconds(us), milliseconds (ms)
+# seconds (s), minutes (m), hours (h), days (d), and weeks (w).
+DOCKER_INFLUXDB_INIT_RETENTION=4d #
+
+
+# InfluxDB port & hostname definitions
+#
+DOCKER_INFLUXDB_INIT_PORT=8086 # port
+DOCKER_INFLUXDB_INIT_HOST=influxdb # hostname
+
+# Telegraf configuration file
+# 
+# Will be mounted to container and used as telegraf configuration
 TELEGRAF_CFG_PATH=./telegraf/telegraf.conf
 
+# Grafana port definition
 GRAFANA_PORT=3000
