Removed same line comments from .env

--- a/.env
+++ b/.env
@@ -6,25 +6,25 @@ DOCKER_INFLUXDB_INIT_MODE=setup
 # Primary InfluxDB admin/superuser credentials
 #
 DOCKER_INFLUXDB_INIT_USERNAME=changeme
-DOCKER_INFLUXDB_INIT_PASSWORD=changeme # minimum 8 characters
-DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=changeme # admin token
+DOCKER_INFLUXDB_INIT_PASSWORD=changeme 
+DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=changeme 
 
 # Primary InfluxDB organization & bucket definitions
 # 
-DOCKER_INFLUXDB_INIT_ORG=changeme # organization name
-DOCKER_INFLUXDB_INIT_BUCKET=changeme # bucket name
+DOCKER_INFLUXDB_INIT_ORG=changeme 
+DOCKER_INFLUXDB_INIT_BUCKET=changeme 
 
 # Primary InfluxDB bucket retention period
 #
 # NOTE: Valid units are nanoseconds (ns), microseconds(us), milliseconds (ms)
 # seconds (s), minutes (m), hours (h), days (d), and weeks (w).
-DOCKER_INFLUXDB_INIT_RETENTION=4d #
+DOCKER_INFLUXDB_INIT_RETENTION=4d 
 
 
 # InfluxDB port & hostname definitions
 #
-DOCKER_INFLUXDB_INIT_PORT=8086 # port
-DOCKER_INFLUXDB_INIT_HOST=influxdb # hostname
+DOCKER_INFLUXDB_INIT_PORT=8086 
+DOCKER_INFLUXDB_INIT_HOST=influxdb 
 
 # Telegraf configuration file
 # 
