update influxdb_v2 output URL

--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -1002,7 +1002,7 @@
   ## Multiple URLs can be specified for a single cluster, only ONE of the
   ## urls will be written to each interval.
   ##   ex: urls = ["https://us-west-2-1.aws.cloud2.influxdata.com"]
-  urls = ["http://${DOCKER_INFLUXDB_INIT_HOST}:${DOCKER_INFLUXDB_INIT_PORT}"]
+  urls = ["http://${DOCKER_INFLUXDB_INIT_HOST}:8086"]
 
   ## Token for authentication.
   token = "$DOCKER_INFLUXDB_INIT_ADMIN_TOKEN"
